[package]
name = "videoland_py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "videoland"
crate-type = ["cdylib"]

[dependencies]
bytemuck = "1.14.3"
pyo3 = "0.20.3"
videoland_renderer = { path = "../videoland_renderer" }
